--- a/index.html
+++ b/index.html
@@ -1,74 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href=".\css\index.css" />
   <title>Bitacora De Actividades</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-
-    header {
-      background-color: #3768B0;
-      color: #BB9500;
-      text-align: center;
-      padding: 20px;
-    }
-
-    h1, h2 {
-      margin: 0;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-
-    th, td {
-      border: 1px solid #B2685F;
-      padding: 10px;
-      text-align: left;
-    }
-
-    th {
-      background-color: #FC6E5B;
-      color: #428DFC
-    }
-
-    a {
-      color: #1776CA;
-    }
-
-    @media screen and (max-width: 768px) {
-      h1 {
-        font-size: 28px;
-      }
-
-      .container {
-        padding: 10px;
-      }
-
-      table {
-        font-size: 14px;
-      }
-
-      th, td {
-        padding: 5px;
-      }
-    }
-  </style>
 </head>
 <body>
 <header>
