menu falta organizar

--- a/actividad_01.html
+++ b/actividad_01.html
@@ -76,7 +76,16 @@
             
         </div>
     </main>
-	
+    <title>Ingresa</title>
+    <div class="subscription-form">
+        <h2>Reserva tu <span>cita!</span> </h2>
+        <form>
+          <input type="Name" placeholder="Name" required>
+          <input type="Telefono" placeholder="Numero" required>
+          <input type="Email" placeholder="example@gmail.com" required>
+          <button type="submit">Iniciar Sesion</button>
+        </form>
+      </div>
 	  
 	</body>
 </html>
