--- a/actividad_01.html
+++ b/actividad_01.html
@@ -76,7 +76,8 @@
             
         </div>
     </main>
-    <title>Ingresa</title>
+    <footer>
+        <title>Ingresa</title>
     <div class="subscription-form">
         <h2>Reserva tu <span>cita!</span> </h2>
         <form>
@@ -86,6 +87,6 @@
           <button type="submit">Iniciar Sesion</button>
         </form>
       </div>
-	  
+    </footer>
 	</body>
 </html>
