--- a/actividad_01.html
+++ b/actividad_01.html
@@ -9,10 +9,10 @@
   </head>
   
   <body>
-	  <header>
+	  <header class= "titulo" >
 		  <svg viewBox="0 0 960 300">
 			  <symbol id="s-text">
-				  <text text-anchor="middle" x="50%" y="80%">Taller de Poesia</text>
+				  <text x="50%" y="40%" >Taller de Poesia</text>
 			  </symbol>
 		  
 			  <g class = "g-ants">
