--- a/index.html
+++ b/index.html
@@ -7,44 +7,21 @@
   
   <title>Bitacora De Actividades</title>
 </head>
-<body>
-<header>
-  <h1>Bitacora de Actividades PWII</h1>
-  <h2>Desarrollado por: (nombre)</h2>
-</header>
-<img src="./images/iuc.png" alt="Universitaria de Colombia" />
-<div class="container">
-  <table>
-    <thead>
-    <tr>
-      <th>Nombre Actividad</th>
-      <th>Enlace de la Actividad</th>
-      <th>Desarrollo de Actividades</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>Primera Actividad</td>
-      <td><a href="actividad_01.html" target="_blank">actividad_01</a></td>
-      <td><a href="#" target="_blank">Personalizada</a></td>
-    </tr>
-    <tr>
-      <td>Segunda Actividad</td>
-      <td><a href="actividad_02.html" target="_blank">actividad_02</a></td>
-      <td><a href="#" target="_blank">Personalizada</a></td>
-    </tr>
-    <tr>
-      <td>Tercera Actividad</td>
-      <td><a href="actividad_03.html" target="_blank">actividad_03</a></td>
-      <td><a href="#" target="_blank">Personalizada</a></td>
-    </tr>
-    <tr>
-      <td>Cuarta Actividad</td>
-      <td><a href="actividad_04.html" target="_blank">actividad_04</a></td>
-      <td><a href="#" target="_blank">Personalizada</a></td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<body >
+  <ul>
+    <li style="--clr:#00ade1">
+      <a href="actividad_01.html" data-text="&nbsp;Poesia">&nbsp;Poesia&nbsp;</a>
+    </li>
+    <li style="--clr:#ff6493">
+      <a href="actividad_02.html" data-text="&nbsp;actividad_2">&nbsp;Actividad 2&nbsp;</a>
+    </li>
+    <li style="--clr:#ffdd1c">
+      <a href="actividad_03.html" data-text="&nbsp;actividad_3">&nbsp;Actividad 3&nbsp;</a>
+    </li>
+    <li style="--clr:#00dc82">
+      <a href="actividad_04.html" data-text="&nbsp;actividad_4">&nbsp;Actividad 4&nbsp;</a>
+    </li>
+
+  </ul>
 </body>
 </html>
