solucionado probema de responsive index

--- a/actividad_02.html
+++ b/actividad_02.html
@@ -11,55 +11,78 @@
 			<header>
 				<nav>
 					<ul>
-						<li><a href="" class="current">inicio</a></li>
-						<li><a href="">eventos</a></li>
-						<li><a href="">reservas</a></li>
+						<li><a href="" class="current">Inicio</a></li>
+						<li><a href="">Carreras</a></li>
 						<li><a href="actividad_01.html">Actividad 01</a></li>
 						<li><a href="actividad_03.html">Actividad 03</a></li>
 					</ul>
 				</nav>
 			</header>
-			<section class="courses">
-				<article>
-					<figure>
-						<img src=".\images\bok-choi.jpg" alt="Bok Choi" />
-						<figcaption>Bok Choi</figcaption>
-					</figure>
-					<hgroup>
-						<h2>Verduras en Salsa</h2>
-						<h3>Una receta muy sencilla</h3>
-					</hgroup>
-					<p>Esta receta es un delicioso guiso con verduras, pero las 
-					verduras son sazonadas previamente en una salsa dulzona de soja y azúcar.</p>
-				</article>    
-				<article>
-					<figure>
-						<img src=".\images\teriyaki.jpg" alt="Teriyaki sauce" />
-						<figcaption>Salsa Teriyaki</figcaption>
-					</figure>
-					<hgroup>
-						<h2>Salsas Agridulces</h2>
-						<h3>El mejor acompañamiento</h3>
-					</hgroup>
-					<p>Acompaña los alimentos son asados, horneados o a la parrilla, 
-					con un adobo de salsa agridulce.</p>
-				</article>    
+			<section class="porfolios container">
+				<div class="porfolio">
+					<img src="images\monaco.jpg" alt="">
+					<div class="porfolio-1">
+						<h3>Monaco</h3>
+						<p>	Circuito: Imola	</p>
+						<p>	Longitud: 0 metro	</p>
+						<p>Récord: Lewis Hamilton - 01:15.484 - Año: (2020)</p>
+						<p>	Ganador 2022: Max Verstappen</p>
+					</div>
+		
+				</div>
+				<div class="porfolio">
+					<div class="porfolio-2">
+						<h3>MONTECARLO </h3>
+						<p>	Circuito: Montecarlo	</p>
+						<p>	Longitud: 3340 metros	</p>
+						<p>Récord:Lewis Hamilton - 1:12.909 - Año: (2021)</p>
+						<p>	Ganador 2022: Sergio Pérez</p>
+					</div>
+					<img src="images\espana.jpg" alt="">
+				</div>
+		
+				<div class="porfolio">
+					<img src="images\bahrein.jpg" alt="">
+					<div class="porfolio-1">
+						<h3>Sakhir</h3>
+						<p>	Circuito: Montecarlo	</p>
+						<p>	Longitud: 6299 metros	</p>
+						<p>Récord: Lewis Hamilton - 1:27.264 - Año: (2020)</p>
+						<p>	Ganador 2022: Charles Leclerc</p>
+					</div>
+				</div>
 			</section>
 			<aside>
-				<section class="popular-recipes">
-					<h2>Otras Recetas</h2>
-					<a href="">Cantonesa (Cocina de Yue)</a>
-					<a href="">Sichuan (Cocina de Chuan)</a>
-					<a href="">Zhejiang (Cocina de Zhe)</a>
-					<a href="">Anhui (Cocina de Hui)</a>
-				</section>
-				<section class="contact-details">
-					<h2>Contactanos</h2>
-					<p>Comida Asiatica<br />
-						Avenida Longitudinal<br />
-						Sector Principal<br />
-						Capital</p>
-				</section>
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+				<div class="wrapper">
+				<div class="navbar">
+					<div class="navbar__item -blue">
+					<span class="navbar__icon">
+						<i class="fa-brands fa-twitch"></i>
+					</span>
+					</div>
+					<div class="navbar__item -orange">
+					<span class="navbar__icon">
+						<i class="fa-brands fa-youtube"></i>
+					</span>
+					</div>
+					<div class="navbar__item -navy-blue">
+					<span class="navbar__icon">
+						<i class="fa-brands fa-facebook"></i>
+					</span>
+					</div>
+					<div class="navbar__item -black">
+					<span class="navbar__icon">
+						<i class="fa-brands fa-codepen"></i>
+					</span>
+					</div>
+					<div class="navbar__item -black">
+					<span class="navbar__icon">
+						<i class="fa-brands fa-tiktok"></i>
+					</span>
+					</div>
+				</div>
+				</div>
 			</aside>
 			<footer>
 				&copy; 2023 Comida Asiatica
