--- a/actividad_03.html
+++ b/actividad_03.html
@@ -4,34 +4,61 @@
 	<meta charset="UTF-8">
 	<meta name="description" content="IUC, Universitaia de Colombia, Universidad, COLOMBIA" />
 	<title>Actividad 03</title>
+	<link rel="stylesheet" type="text/css" href="css\css03.css">
 </head>
-<body>
+
 <header>
-	<h1>IUC Universitaria de Colombia</h1>
-	<nav>
-		<ul>
-			<li><a href="https://universitariadecolombia.edu.co/" title="Ir a la página de inicio">Inicio</a></li>
-			<li><a href="https://www.facebook.com/universitariaco/" title="Ir a las redes sociales">Redes Sociales</a></li>
-		</ul>
-	</nav>
+	
+<body>
+	
+	<button data-text="Aswesome" class="button">
+		<span class="actual-text">
+			&nbsp;Distric&nbsp;
+		</span>
+		<span class="hover-text" aria-hidden="true">
+			&nbsp;Distric&nbsp;
+		</span>
+	</button>
+	<div class="container">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li class="nav-link">
+                    <a href="#">Inicio</a>
+                </li>
+                <li class="nav-link services">
+                    <a href="https://www.instagram.com/district_oficial/">Redes Sociales
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
+<div class="wrapper">
+	<div class="box">
+		<p>>Cra. 13 #93B-31, Bogotá, Colombia</p>
+	</div>
+	<div class="box">
+		<p>Teléfono:  +57 13000830</p>
+	</div>
+	<div class="box">
+		<p>Incribete <a href="https://www.menudistrict.com">imenudistrict.com</a></p>
+	</div>
+</div>
 <main>
-	<p><span class="contact">Dirección: </span>Carrera 7 No. 35-85, Bogotá, Colombia</p>
-	<p><span class="contact">Teléfono: </span> +57 1 288 08 71</p>
-	<p><span class="contact">Email: </span> <a href="mailto:inscripciones@universitariadecolombia.edu.co">inscripciones@universitariadecolombia.edu.co</a></p>
-	<figure>
-		<iframe title="Ubicación de la Institución Universitaria de Colombia en Bogotá" width="450" height="350" src="http://maps.google.co.uk/maps?q=Institución+Universitaria+de+Colombia+bogota&amp;output=embed">
+	<figure >
+		<iframe title="Ubicación District Sports Bar Parque 93" width="550" height="450"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.528115500973!2d-74.0514407256524!3d4.677863395297058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9bae40f1d595%3A0x5a54cf27cee52935!2sDistrict!5e0!3m2!1ses!2sus!4v1694343870984!5m2!1ses!2sus">
 		</iframe>
 	</figure>
 </main>
 <footer>
-	<p>&copy; <i>IUC Universitaria de Colombia</i></p>
-	<nav>
-		<ul>
-			<li><a href="actividad_02.html" title="Ir a la actividad anterior">Anterior</a></li>
-			<li><a href="actividad_04.html" title="Ir a la siguiente actividad">Siguiente</a></li>
-		</ul>
-	</nav>
+	<p>&copy; <i>District Sports Bar</i></p>
+	<div class="wrapper">
+		<div class="box">
+			<p>"Ir a la actividad anterior"  <a href="actividad_02.html">Anterior</a></p>
+		</div>
+		<div class="box">
+			<p>"Ir a la siguiente actividad"  <a href="actividad_04.html">Siguiente</a></p>
+		</div>
 </footer>
 </body>
 </html>
