--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <a href="actividad_01.html" data-text="&nbsp;Poesia">&nbsp;Poesia&nbsp;</a>
     </li>
     <li style="--clr:#ff6493">
-      <a href="actividad_02.html" data-text="&nbsp;actividad_2">&nbsp;Actividad 2&nbsp;</a>
+      <a href="actividad_02.html" data-text="&nbsp;Formua1">&nbsp;Formua1&nbsp;</a>
     </li>
     <li style="--clr:#ffdd1c">
-      <a href="actividad_03.html" data-text="&nbsp;actividad_3">&nbsp;Actividad 3&nbsp;</a>
+      <a href="actividad_03.html" data-text="&nbsp;District">&nbsp;District&nbsp;</a>
     </li>
     <li style="--clr:#00dc82">
       <a href="actividad_04.html" data-text="&nbsp;actividad_4">&nbsp;Actividad 4&nbsp;</a>
