base de la quita pagina hecha

--- a/actividad_03.html
+++ b/actividad_03.html
@@ -51,7 +51,7 @@
 	</figure>
 </main>
 <footer>
-	<p>&copy; <i>District Sports Bar</i></p>
+	<p>&copy; <i> Sports Bar</i></p>
 	<div class="wrapper">
 		<div class="box">
 			<p>"Ir a la actividad anterior"  <a href="actividad_02.html">Anterior</a></p>
