Bases de las 5 paginas, lista

--- a/actividad_04.html
+++ b/actividad_04.html
@@ -22,38 +22,34 @@
 		</li>
 	</ul>
 		</div>
-		<div class="wrapper">
-			<div class="main-story container_12">
-				<div class="grid_6 push_6">
-					<h1><a href="">Solo un cambio</a></h1>
-				</div>
-				<div class="intro grid_3 push_9">
-					<p class="date">16 APRIL 2022</p>
-					<p>Las bicicletas veloheld combinan un diseño minimalista con enorme calidad. La gama de productos veloheld nos deleita con su belleza y sencillez. Las bicicletas en blanco y negro presentan una corta distancia entre ejes, una sola marcha y un manillar estrecho... Todo lo que necesitas para explorar las calles de la ciudad.</p>
-					<p>Para los que quieran crear su propia bicicleta, los marcos Veloheld están disponibles en tres tamaños y dos colores, y son el punto de partida perfecto. <a href="">Continuar leyendo...</a></p>
-				</div>
+		<section>
+			<img src="images\slider1imagen.jpg">
+			<img src="images\slider2imagen.jpg">
+			<img src="images\slider3imagen.jpg">
+			<img src="images\slider4imagen.jpg">
+			</section>
 			</div><!-- .main-story -->
 			<div class="more-articles container_12">
-				<h2 class="grid_12"><a href="">Mas Articulos</a></h2>
+				<h2 class="grid_12"><a href="">Datos</a></h2>
 				<div class="grid_3">
-					<img src="images/more1.jpg" alt="The road ahead" width="220" height="125" />
-					<p><a href="">Historia de la marca: Ciclas Tandem - fabricadas a mano </a></p>
-					<p><a href="">Marcos Todoterreno: Innovaciones en la fabricación y reparación de bicicletas</a></p>
+					<img src="images\chispas.jpg" alt="The road ahead" width="220" height="125" />
+					<p><a href="">Primer Campeonato de Fórmula Uno </a></p>
+					<p><a href="">El primer Campeonato Mundial de Pilotos de Fórmula Uno se celebró en 1950. Giuseppe Farina se convirtió en el primer campeón mundial de Fórmula Uno al volante de un Alfa Romeo</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="images/more2.jpg" alt="Sketchbook" width="220" height="125" />
-					<p><a href="">Diario de viaje: Un cuaderno con los mejores bocetos</a></p>
-					<p><a href="">Las diez novedades de 2024: Un vistazo a lo que está por venir</a></p>
+					<img src="images\ferrarijpg.jpg" alt="Sketchbook" width="220" height="125" />
+					<p><a href="">Piloto más Joven Campeón:</a></p>
+					<p><a href="">En 2010, Sebastian Vettel se convirtió en el campeón mundial más joven de la historia de la Fórmula Uno. Tenía solo 23 años cuando ganó su primer título conduciendo para Red Bull Racing</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="images/more3.jpg" alt="Repair shop sign" width="220" height="125" />
-					<p><a href="">Revisión del producto: No todas las cestas son iguales</a></p>
-					<p><a href="">Defensa del carril para bicis: Conozca sus derechos</a></p>
+					<img src="images\Pit stop.webp" alt="Repair shop sign" width="220" height="125" />
+					<p><a href="">El Piloto con más Campeonatos:</a></p>
+					<p><a href="">Michael Schumacher, un piloto alemán, ostenta el récord de más campeonatos de Fórmula Uno ganados, con un total de 7 títulos mundiales. Schumacher compitió para equipos como Benetton y Ferrari.</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="images/more4.jpg" alt="Schwinn Spitfire" width="220" height="125" />
-					<p><a href="">Salón de la Fama de la Bicicleta: La Spitfire de 1958</a></p>
-					<p><a href="">Encuesta a los lectores: Comparta su opinión con nosotros!</a></p>
+					<img src="images\variosjpg.jpg" alt="Schwinn Spitfire" width="220" height="125" />
+					<p><a href="">Circuito de Mónaco</a></p>
+					<p><a href="">El Circuito de Mónaco es uno de los circuitos más icónicos y desafiantes de la Fórmula Uno. Conocido por sus estrechas calles urbanas y cambios de elevación, es considerado un circuito extremadamente técnico. Ha sido un punto destacado en el calendario de la F1 desde la década de 1950.</a></p>
 				</div>
 			</div><!-- .more-articles -->
 		</div><!-- .wrapper -->
