arrelando responsive de actividad 2

--- a/actividad_02.html
+++ b/actividad_02.html
@@ -12,44 +12,37 @@
 				<nav>
 					<ul>
 						<li><a href="" class="current">Inicio</a></li>
-						<li><a href="">Carreras</a></li>
-						<li><a href="actividad_01.html">Actividad 01</a></li>
-						<li><a href="actividad_03.html">Actividad 03</a></li>
+						<li><a href="actividad_01.html">Actividad 1</a></li>
+						<li><a href="actividad_03.html">Actividad 3</a></li>
 					</ul>
 				</nav>
 			</header>
 			<section class="porfolios container">
 				<div class="porfolio">
-					<img src="images\monaco.jpg" alt="">
+					<img src="images\descargar.jpg" alt="">
 					<div class="porfolio-1">
-						<h3>Monaco</h3>
-						<p>	Circuito: Imola	</p>
-						<p>	Longitud: 0 metro	</p>
-						<p>Récord: Lewis Hamilton - 01:15.484 - Año: (2020)</p>
-						<p>	Ganador 2022: Max Verstappen</p>
-					</div>
-		
+						<h3>Osito</h3>
+						<p>	Lana color: cafe,azul,negro	</p>
+						<p>	Longitud:  20cm	</p>
+							</div>
+	
 				</div>
 				<div class="porfolio">
 					<div class="porfolio-2">
-						<h3>MONTECARLO </h3>
-						<p>	Circuito: Montecarlo	</p>
-						<p>	Longitud: 3340 metros	</p>
-						<p>Récord:Lewis Hamilton - 1:12.909 - Año: (2021)</p>
-						<p>	Ganador 2022: Sergio Pérez</p>
-					</div>
-					<img src="images\espana.jpg" alt="">
+						<h3>Elefante</h3>
+						<p>	Lana color: gris,azul,negro	</p>
+						<p>	Longitud: 60cm	</p>
+							</div>
+					<img src="images\elefante.webp" alt="">
 				</div>
 		
 				<div class="porfolio">
-					<img src="images\bahrein.jpg" alt="">
+					<img src="images\ovejita.jpeg" alt="">
 					<div class="porfolio-1">
-						<h3>Sakhir</h3>
-						<p>	Circuito: Montecarlo	</p>
-						<p>	Longitud: 6299 metros	</p>
-						<p>Récord: Lewis Hamilton - 1:27.264 - Año: (2020)</p>
-						<p>	Ganador 2022: Charles Leclerc</p>
-					</div>
+						<h3>Oveja</h3>
+						<p>	Lana color: Blanca, piel	</p>
+						<p>	Longitud: 80cm	</p>
+						</div>
 				</div>
 			</section>
 			<aside>
