responsive de la actividad 3 lista

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <a href="actividad_01.html" data-text="&nbsp;Poesia">&nbsp;Poesia&nbsp;</a>
     </li>
     <li style="--clr:#ff6493">
-      <a href="actividad_02.html" data-text="&nbsp;Formua1">&nbsp;Formua1&nbsp;</a>
+      <a href="actividad_02.html" data-text="&nbsp;Crochet">&nbsp;Crochet&nbsp;</a>
     </li>
     <li style="--clr:#ffdd1c">
       <a href="actividad_03.html" data-text="&nbsp;District">&nbsp;District&nbsp;</a>
     </li>
     <li style="--clr:#00dc82">
-      <a href="actividad_04.html" data-text="&nbsp;PaginaOficial">&nbsp;PaginaOficial&nbsp;</a>
+      <a href="actividad_04.html" data-text="&nbsp;Formula1">&nbsp;Formula1&nbsp;</a>
     </li>
 
   </ul>
